Finished all HTML and CSS

--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/indexStyling.css">
 </head>
-<body>
-    <header>
-        <picture>
-            <img src="images/profilePicture.jpg" Alt="August Pelissero's Picture" width="200">
-            <h1>August J. Pelissero</h1>
-        </picture>
+<body id="body">
+    <header class="headerGrid">
+        <img src="images/profilePicture.jpg" class="augustPicture" Alt="August Pelissero's Picture" width="200">
+        <h1 class="name">August J. Pelissero</h1>
     </header>
-    <main>
-        <h2>WDD230: Assignment Portal</h2>
-        <ul>
-            <li>Lesson 2<a href="Title"></a></li>
-            <li>Lesson 3<a href="Title"></a></li>
-            <li>Lesson 4<a href="Title"></a></li>
-            <li>Lesson 5<a href="Title"></a></li>
-            <li>Lesson 6<a href="Title"></a></li>
-            <li>Lesson 7<a href="Title"></a></li>
-            <li>Lesson 8<a href="Title"></a></li>
-            <li>Lesson 9<a href="Title"></a></li>
-            <li>Lesson 10<a href="Title"></a></li>
-            <li>Lesson 11<a href="Title"></a></li>
-        </ul>
+    <main id="main">
+        <h2 id="wdd230Title">WDD230: Assignment Portal</h2>
+        <div class="list">
+            <ul class="ulLinks">
+                <li>Lesson 2: <a href=""></a>Title</li>
+                <li>Lesson 3: <a href=""></a>Title</li>
+                <li>Lesson 4: <a href=""></a>Title</li>
+                <li>Lesson 5: <a href=""></a>Title</li>
+                <li>Lesson 6: <a href=""></a>Title</li>
+                <li>Lesson 7: <a href=""></a>Title</li>
+                <li>Lesson 8: <a href=""></a>Title</li>
+                <li>Lesson 9: <a href=""></a>Title</li>
+                <li>Lesson 10: <a href=""></a>Title</li>
+                <li>Lesson 11: <a href=""></a>Title</li>
+            </ul>
+        </div>
     </main>
 </body>
-<footer>
+<footer id="footer">
     <p>@ <const id="year"></const> | August Pelissero | Buckeye, AZ</p>
     <p>Last Updated: <const id="lastUpdate"></const> </p>
 </footer>
