Cleaned up ids and added basic info at top of webpage

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="August Pelissero" content="My project portal for WWD230: Web Development I.">
+    <title>August Pelissero's Assignment Portal</title>
     <link rel="stylesheet" href="css/indexStyling.css">
 </head>
 <body id="body">
@@ -13,8 +13,8 @@
         <h1 class="name">August J. Pelissero</h1>
     </header>
     <main id="main">
-        <h2 id="wdd230Title">WDD230: Assignment Portal</h2>
-        <div class="list">
+        <h2>WDD230: Assignment Portal</h2>
+        <div>
             <ul class="ulLinks">
                 <li>Lesson 2: <a href=""></a>Title</li>
                 <li>Lesson 3: <a href=""></a>Title</li>
