--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="August Pelissero" content="My project portal for WWD230: Web Development I.">
     <title>August Pelissero's Assignment Portal</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/indexStyling.css">
 </head>
 <body id="body">
