Added the font Martel.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>August Pelissero's Assignment Portal</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/indexStyling.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martel&display=swap" rel="stylesheet">
 </head>
 <body id="body">
     <header class="headerGrid">
