Added media queries into Index.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="August Pelissero" content="My project portal for WWD230: Web Development I.">
     <title>August Pelissero's Assignment Portal</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/indexStyling.css">
+    <link rel="stylesheet" href="css/indexSmall.css">
+    <link rel="stylesheet" href="css/indexMedium.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martel&display=swap" rel="stylesheet">
