Added all HTML, pictures, and linksfor the second lesson.

--- a/index.html
+++ b/index.html
@@ -12,29 +12,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martel&display=swap" rel="stylesheet">
 </head>
+
 <body id="body">
+
     <header class="headerGrid">
         <img src="images/profilePicture.jpg" class="augustPicture" Alt="August Pelissero's Picture" width="200">
         <h1 class="name">August J. Pelissero</h1>
     </header>
+
     <main id="main">
         <h2>WDD230: Assignment Portal</h2>
         <div>
             <ul class="ulLinks">
-                <li>Lesson 2: <a href=""></a>Title</li>
-                <li>Lesson 3: <a href=""></a>Title</li>
-                <li>Lesson 4: <a href=""></a>Title</li>
-                <li>Lesson 5: <a href=""></a>Title</li>
-                <li>Lesson 6: <a href=""></a>Title</li>
-                <li>Lesson 7: <a href=""></a>Title</li>
-                <li>Lesson 8: <a href=""></a>Title</li>
-                <li>Lesson 9: <a href=""></a>Title</li>
-                <li>Lesson 10: <a href=""></a>Title</li>
-                <li>Lesson 11: <a href=""></a>Title</li>
+                <li>Lesson 2: <a href="lesson2DesignPrinciples.html">Design Principles Document</a></li>
+                <li>Lesson 3: <a href="">Title</a></li>
+                <li>Lesson 4: <a href="">Title</a></li>
+                <li>Lesson 5: <a href="">Title</a></li>
+                <li>Lesson 6: <a href="">Title</a></li>
+                <li>Lesson 7: <a href="">Title</a></li>
+                <li>Lesson 8: <a href="">Title</a></li>
+                <li>Lesson 9: <a href="">Title</a></li>
+                <li>Lesson 10: <a href="">Title</a></li>
+                <li>Lesson 11: <a href="">Title</a></li>
             </ul>
         </div>
     </main>
 </body>
+
 <footer id="footer">
     <p>@ <const id="year"></const> | August Pelissero | Buckeye, AZ</p>
     <p>Last Updated: <const id="lastUpdate"></const> </p>
