Testing if Github is connected to new laptop

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body id="body">
-
+    <h2>WDD230: Assignment Portal</h2>
     <header class="headerGrid">
         <img src="images/profilePicture.jpg" class="augustPicture" Alt="August Pelissero's Picture" width="200">
         <h1 class="name">August J. Pelissero</h1>
