--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div>
             <ul class="ulLinks">
                 <li>Lesson 2: <a href="lesson2DesignPrinciples.html">Design Principles Document</a></li>
-                <li>Lesson 3: <a href="lesson3index.html">Chamber Site Plan</a></li>
+                <li>Lesson 3: <a href="lesson3/index.html">Chamber Site Plan</a></li>
                 <li>Lesson 4: <a href="">Title</a></li>
                 <li>Lesson 5: <a href="">Title</a></li>
                 <li>Lesson 6: <a href="">Title</a></li>
