--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="August Pelissero" content="My project portal for WWD230: Web Development I.">
     <title>August Pelissero's Assignment Portal</title>
+    <link rel = "pageIcon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -22,7 +23,7 @@
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
-                <li><a href="#">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Location</a></li>
                 <li><a href="#">Contact</a></li>    
