--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div class="meetingBanner">🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</div>
     <header>
         <img src="images/saguaroChamberLogo.png" class="saguaroLogo" alt="Saguaro Chamber's Logo">
         <h1 class="saguaroTitle">Saguaro Chamber</h1>
@@ -35,9 +36,22 @@
     </header>
 
     <main>
-        <div class="event"><p>Event</p></div>
-        <div class="callToAction"><p>Hero with Site name and call to action</p></div>
-        <div class="weather"><p>Weather</p></div>
+        <div class="event">
+            <h2>Ribbon Cutting</h2>
+            <p><b>Marv's Gaming Emporium</b></p>
+            <p>Join us for the grand opening of Marv's Gaming Emporium</p>
+        </div>
+        <div class="callToAction">
+            <h2 class="actionWelcome">Welcome to Pheonix.</h2>
+            <p class="actionJoin">Join the Chamber</p>
+        </div>
+        <div class="weather">
+            <h2 class="weatherTitle"><b>Weather</b></h2>
+            <p>97 F</p>
+            <p>Clear</p>
+            <p>Wind Speed: 2.5mph</p>
+            <p>Wind Chill: N/A</p>
+        </div>
         <div class="news"><p>News Release</p></div>
         <div class="join"><p>Join</p></div>
         <div class="spotlight">
@@ -58,4 +72,8 @@
 </footer>
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
+<script src="scripts/meetingBanner.js"></script>
 </html>
+
+
+
