--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="meetingBanner">🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</div>
+    <div id="meetingBanner">🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</div>
     <header>
         <img src="images/saguaroChamberLogo.png" class="saguaroLogo" alt="Saguaro Chamber's Logo">
         <h1 class="saguaroTitle">Saguaro Chamber</h1>
@@ -52,11 +52,30 @@
             <p>Wind Speed: 2.5mph</p>
             <p>Wind Chill: N/A</p>
         </div>
-        <div class="news"><p>News Release</p></div>
-        <div class="join"><p>Join</p></div>
+        <div class="news">
+            <h2>News Release</h2>
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+        </div>
+        <div class="join">
+            <h2 class="joinHeader">Join</h2>
+            <p>Learn how to join the chamber! Help expand your business today!</p>
+        </div>
         <div class="spotlight">
-            <p>Spotlight 1</p>
-            <p>Spotlight 2</p>
+            <div class="bugDiv">
+                <h2>Joe's Bugs Removal</h2>
+                <img src="images/bug.png" class="bugImg" alt="Joe's Bugs Removal Logo">
+                <p>joesbugs@gmail.com</p>
+                <p>(480) 347-5784</p>
+                <p>Website</p>
+            </div>
+            <div class="gardenDiv">
+                <h2>Garden World</h2>
+                <img src="images/plant.png" class="bugImg" alt="Joe's Bugs Removal Logo">
+                <p>gardenworld@gmail.com</p>
+                <p>(480) 485-1934</p>
+                <p>Website</p>
+            </div>
+            
         </div>
     </main>
 </body>
@@ -72,7 +91,6 @@
 </footer>
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
-<script src="scripts/meetingBanner.js"></script>
 </html>
 
 
