Started working on pictures

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,6 +43,13 @@
         </div>
         <div class="callToAction">
             <h2 class="actionWelcome">Welcome to Pheonix.</h2>
+            <img src="images/wdd230-org.jpg" 
+            class="heroImg" 
+            sizes="50vw"
+            alt="Hero Picture"
+            srcset="images/wdd 500w,
+                    images/wdd230OrgLarge.jpg 800w"
+            >
             <p class="actionJoin">Join the Chamber</p>
         </div>
         <div class="weather">
