--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <li>Lesson 2: <a href="lesson2DesignPrinciples.html">Design Principles Document</a></li>
                 <li>Lesson 3: <a href="lesson3/index.html">Chamber Site Plan</a></li>
                 <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page</a></li>
-                <li>Lesson 5: <a href="chamber/index.html">Chamber Home Page</a></li>
-                <li>Lesson 6: <a href="">Title</a></li>
+                <li>Lesson 5: <a href="chamber/index.html">Chamber Home Page (Part 2)</a></li>
+                <li>Lesson 6: <a href="chamber/index.html">Chamber Home Page (Part 3)</a></li>
                 <li>Lesson 7: <a href="">Title</a></li>
                 <li>Lesson 8: <a href="">Title</a></li>
                 <li>Lesson 9: <a href="">Title</a></li>
