Fixed loading. Need to get rid of blur on images.

--- a/lesson 7/lazyload.html
+++ b/lesson 7/lazyload.html
@@ -16,4 +16,5 @@
     <img src="images/Placeholder.png" data-src="images/wdd230Org.jpg" alt="WDD 230 Image" loading="lazy">
 
 </body>
+<script src="scripts/lazyLoad.js"></script>
 </html>
