--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page</a></li>
                 <li>Lesson 5: <a href="chamber/index.html">Chamber Home Page (Part 2)</a></li>
                 <li>Lesson 6: <a href="chamber/index.html">Chamber Home Page (Part 3)</a></li>
-                <li>Lesson 7: <a href="">Title</a></li>
+                <li>Lesson 7: <a href="lesson 7/lazyload.html">Lazy Loading</a></li>
                 <li>Lesson 8: <a href="">Title</a></li>
                 <li>Lesson 9: <a href="">Title</a></li>
                 <li>Lesson 10: <a href="">Title</a></li>
