--- a/lesson 7/lazyload.html
+++ b/lesson 7/lazyload.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h1>Progressive Loading of Images</h1>
-    <img src="images/Placeholder.png" data-src="images/bugOld.png" alt="Cartoon Bug" loading="lazy">
-    <img src="images/Placeholder.png" data-src="images/facebookLogo.png" alt="Facebook Logo" loading="lazy">
-    <img src="images/Placeholder.png" data-src="images/plantSmall.png" alt="Cartoon Plant" loading="lazy">
-    <img src="images/Placeholder.png" data-src="images/saguaroChamberLogo.png" alt="Saguaro Chamber Logo" loading="lazy">
-    <img src="images/Placeholder.png" data-src="images/wdd230Org.jpg" alt="WDD 230 Image" loading="lazy">
+    <img src="images/Placeholder.png" data-src="images/bugOld.png" alt="Cartoon Bug">
+    <img src="images/Placeholder.png" data-src="images/facebookLogo.png" alt="Facebook Logo">
+    <img src="images/Placeholder.png" data-src="images/plantSmall.png" alt="Cartoon Plant">
+    <img src="images/Placeholder.png" data-src="images/saguaroChamberLogo.png" alt="Saguaro Chamber Logo" >
+    <img src="images/Placeholder.png" data-src="images/wdd230Org.jpg" alt="WDD 230 Image">
 
 </body>
 <script src="scripts/lazyLoad.js"></script>
