Finished W07 Assignment for Chamber Page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,9 +78,9 @@
         </div>
         <div class="weather">
             <h2 class="weatherTitle"><b>Weather</b></h2>
-            <p>97 F</p>
+            <p class="temp">45</p>
             <p>Clear</p>
-            <p>Wind Speed: 2.5mph</p>
+            <p class="windSpeed">4</p>
             <p class="windchill"></p>
         </div>
         <div class="news">
