--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -60,50 +60,52 @@
 <body>
     <main class="discoverMain">
         <div class="population">
-            <picture class="populationPic">
-                <source media="(max-width:500px)" srcset="images/placeholder2Small.jpg">
-                <source media="(max-width:700px)" srcset="images/placeholder2Medium.jpg">
-                <source media="(max-width:1600px)" srcset="images/placeholder2Large.jpg">
-                <img src="images/placeholder2.png" alt="">
+            <picture class="discoveryImgs">
+                <source media="(max-width:500px)" srcset="images/populationImgSmall.jpg">
+                <source media="(max-width:700px)" srcset="images/populationImgMedium.jpg">
+                <source media="(max-width:1600px)" srcset="images/populationImgLarge.jpg">
+                <img src="images/populationImg.jpg" alt="Skyscraper Image" loading="lazy">
             </picture>
-            <p>Pheniox, AZ has a population of 1.66 million people. The population is increasing at a 1.56%/per year. Business opprotunities pop up as more people coming in!</p>
+            <p>Phenoix, AZ has a population of 1.66 million people. The population is increasing at a 1.56%/per year. Business opprotunities pop up as more people coming in!</p>
         </div>
         <div class="medianAge">
-            <picture class="">
-                <source media="(max-width:500px)" srcset="">
-                <source media="(max-width:700px)" srcset="">
-                <source media="(max-width:1600px)" srcset="">
-                <img src="" alt="">
+            <picture class="discoveryImgs">
+                <source media="(max-width:500px)" srcset="images/ageImgSmall.jpg">
+                <source media="(max-width:700px)" srcset="images/ageImgMedium.jpg">
+                <source media="(max-width:1600px)" srcset="images/ageImgLarge.jpg">
+                <img src="images/ageImg.jpg" alt="Group of People" loading="lazy">
             </picture>
-            <p>The average age of Arizona residences is around 30. Plan accordingly when figuring out a target audiance for your business.</p>
+            <p>The average age of Phenoix residences is around 30. Plan accordingly when figuring out a target audiance for your business.</p>
         </div>
         <div class="employment">
-            <picture class="">
-                <source media="(max-width:500px)" srcset="">
-                <source media="(max-width:700px)" srcset="">
-                <source media="(max-width:1600px)" srcset="">
-                <img src="" alt="">
+            <picture class="discoveryImgs">
+                <source media="(max-width:500px)" srcset="images/employedImgSmall.jpg">
+                <source media="(max-width:700px)" srcset="images/employedImgMedium.jpg">
+                <source media="(max-width:1600px)" srcset="images/employedImgLarge.jpg">
+                <img src="images/employedImg.jpg" alt="Crowd of People" loading="lazy">
             </picture>
-            <p>There are 145 million people employed in Arizona. Get your business out there now, as many people are still searching for jobs.</p>
+            <p>There are 145 million people employed in Phenoix, AZ. Get your business out there now, as many people are still searching for jobs.</p>
         </div>
         <div class="occupations">
-            <picture class="">
-                <source media="(max-width:500px)" srcset="">
-                <source media="(max-width:700px)" srcset="">
-                <source media="(max-width:1600px)" srcset="">
-                <img src="" alt="">
+            <picture class="discoveryImgs">
+                <source media="(max-width:500px)" srcset="images/employeesImgSmall.jpg">
+                <source media="(max-width:700px)" srcset="images/employeesImgMedium.jpg">
+                <source media="(max-width:1600px)" srcset="images/employeesImgLarge.jpg">
+                <img src="images/employeesImg.jpg" alt="Employees Image" loading="lazy">
             </picture>
-            <p>There are 823k employees in Pheniox. Most of them are either employeed in office and administrative support, sales occupations, and management positions. </p>
+            <p>There are 823k employees in Phenoix. Most of them are either employeed in office and administrative support, sales occupations, and management positions. </p>
         </div>
         <div class="industries">
-            <picture class="">
-                <source media="(max-width:500px)" srcset="">
-                <source media="(max-width:700px)" srcset="">
-                <source media="(max-width:1600px)" srcset="">
-                <img src="" alt="">
+            <picture class="discoveryImgs">
+                <source media="(max-width:500px)" srcset="images/industriesImgSmall.jpg">
+                <source media="(max-width:700px)" srcset="images/industriesImgMedium.jpg">
+                <source media="(max-width:1600px)" srcset="images/industriesImgLarge.jpg">
+                <img src="images/industriesImg.jpg" alt="" loading="lazy">
             </picture>
-            <p>The most common emplyment sectors in Pheniox are health care and social assistance, retail, and accommodation and food services.</p>
+            <p>The most common employment sectors in Phenoix are health care and social assistance, retail, and accommodation and food services.</p>
         </div>
+
+        <h3 class="visits">Number of Visits: <span class="numberVisits"></span></h3>
     </main>
 </body>
 
@@ -112,7 +114,7 @@
         <source media="(max-width:500px)" srcset="images/logoFooterSmall.webp">
         <source media="(max-width:700px)" srcset="images/logoFooterMedium.webp">
         <source media="(max-width:1600px)" srcset="images/logoFooterLarge.webp">
-        <img src="images/saguaroChamberLogoWebp.webp" alt="Saguaro Chamber's Logo">
+        <img src="images/saguaroChamberLogoWebp.webp" alt="Saguaro Chamber's Logo" loading="lazy">
     </picture>
     <p class="nameFooter">Saguaro Chamber</p>
     <p class="addressFooter">13220 Cactus Rd, <br>Phenoix, AZ, 85003</p>
@@ -123,5 +125,6 @@
 </footer>
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
+<script src="scripts/websiteVisits.js"></script>
 
 </html>
