--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <li>Lesson 5: <a href="chamber/index.html">Chamber Home Page (Part 2)</a></li>
                 <li>Lesson 6: <a href="chamber/index.html">Chamber Home Page (Part 3)</a></li>
                 <li>Lesson 7 (Part 1): <a href="lesson 7/lazyload.html">Lazy Loading</a></li>
-                <li>Lesson 7 (Part 2): <a href="chamber/index.html">Lazy Loading</a></li>
-                <li>Lesson 7 (Part 1): <a href="lesson8/tablebuild.html">Lazy Loading</a></li>
-                <li>Lesson 7 (Part 2): <a href="chamber/index.html">Lazy Loading</a></li>
+                <li>Lesson 7 (Part 2): <a href="chamber/index.html">Chamber Home Page (Part 4)</a></li>
+                <li>Lesson 7 (Part 1): <a href="lesson8/tablebuild.html">HTML Table Build</a></li>
+                <li>Lesson 7 (Part 2): <a href="chamber/index.html">Chamber Home Page (Part 5)</a></li>
                 <li>Lesson 9: <a href="">Title</a></li>
                 <li>Lesson 10: <a href="">Title</a></li>
                 <li>Lesson 11: <a href="">Title</a></li>
