Re-did all of the table site

--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -7,8 +7,41 @@
     <link rel="stylesheet" href="tablecss.css">
     <title>Document</title>
 </head>
-<body>
     <table>
+        <thead>
+            <tr>
+                <th colspan="2">Sales</th>
+            </tr>
+            <tr>
+                <th>Month</th>
+                <th>Amount</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>July</td>
+                <td>3,000</td>
+            </tr>
+            <tr>
+                <td>August</td>
+                <td class="highlighted">8,000</td>
+            </tr>
+            <tr>
+                <td>September</td>
+                <td>4,000</td>
+            </tr>
+            <tr>
+                <td>October</td>
+                <td>3,000</td>
+            </tr>
+            <tr>
+                <td>November</td>
+                <td>2,000</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <!--<table>
         <thead>
             <tr>
                 <th>&nbsp;</th>
@@ -70,6 +103,6 @@
                 <td>19</td>
             </tr>
         </tbody>
-    </table>
+    </table>-->
 </body>
 </html>
