Fixed businesses.json loading problem

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -32,7 +32,7 @@
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="#">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li class="active"><a href="join.html">Join</a></li> 
                 <li><a href="#">Contact</a></li>    
             </ul>
@@ -108,6 +108,5 @@
 </footer>
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
-<script src="scripts/windchill.js"></script>
 <script src="scripts/dateLoad.js"></script>
 </html>
