--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,8 +32,8 @@
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="#">Directory</a></li>
-                <li class="active"><a href="join.html">Join</a></li> 
+                <li class="active"><a href="directory.html">Directory</a></li>
+                <li><a href="join.html">Join</a></li> 
                 <li><a href="#">Contact</a></li>    
             </ul>
         </nav>
@@ -81,6 +81,6 @@
 </footer>
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
-<script src="scripts/windchill.js"></script>
-<script src="scripts/dateLoad.js"></script>
+<script src="scripts/businessJSON.js"></script>
+
 </html>
