Added the directory page, buttons, and script for them.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -61,7 +61,9 @@
     </header>
 
     <main class="directoryMain"> 
-        <div class="businessInfo"></div>
+        <button class="gridBtn">Grid</button>
+        <button class="listBtn">List</button>
+        <div class="grid"></div>
     </main>
 </body>
 
@@ -82,5 +84,5 @@
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
 <script src="scripts/businessJSON.js"></script>
-
+<script src="scripts/directoryButtons.js"></script>
 </html>
