Finished Directory Page and imported wireframes

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -61,8 +61,10 @@
     </header>
 
     <main class="directoryMain"> 
-        <button class="gridBtn">Grid</button>
-        <button class="listBtn">List</button>
+        <div class="btnDiv">
+            <button class="gridBtn">Grid</button>
+            <button class="listBtn">List</button>
+        </div>
         <div class="grid"></div>
     </main>
 </body>
