--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 <li>Lesson 7 (Part 1): <a href="lesson 7/lazyload.html">Lazy Loading</a></li>
                 <li>Lesson 7 (Part 2): <a href="chamber/index.html">Chamber Home Page (Part 4)</a></li>
                 <li>Lesson 8 (Part 1): <a href="lesson8/tablebuild.html">HTML Table Build</a></li>
-                <li>Lesson 8 (Part 2): <a href="chamber/index.html">Chamber Home Page (Part 5)</a></li>
+                <li>Lesson 8 (Part 2): <a href="chamber/index.html">Chamber Discover Page</a></li>
                 <li>Lesson 9 (Part 1): <a href="lesson 9/prophets.html">Latter-day Prophet Card Page</a></li>
+                <li>Lesson 9 (Wireframes): <a href="directoryWireframes/gridLarge.html">Directory Wireframes</a></li>
+                <li>Lesson 9 (Part 2): <a href="chamber/directory.html">Chamber Directory Page</a></li>
                 <li>Lesson 10: <a href="">Title</a></li>
                 <li>Lesson 11: <a href="">Title</a></li>
             </ul>
