--- a/chamber/index.html
+++ b/chamber/index.html
@@ -77,11 +77,12 @@
             <p class="actionJoin">Join the Chamber</p>
         </div>
         <div class="weather">
-            <h2 class="weatherTitle"><b>Weather</b></h2>
-            <p class="temp">45</p>
-            <p>Clear</p>
-            <p class="windSpeed">4</p>
-            <p class="windchill"></p>
+            <h2 id="weatherTitle"><b>Weather</b></h2>
+            <img src="" alt="" id="weatherIcon">
+            <p id="temp"></p>
+            <p id="weatherType"></p>
+            <p id="windSpeed"></p>
+            <p id="windchill"></p>
         </div>
         <div class="news">
             <h2>News Release</h2>
@@ -143,7 +144,7 @@
 </footer>
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
-<script src="scripts/windchill.js"></script>
+<script src="scripts/weatherAPI.js"></script>
 </html>
 
 
