--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li>Lesson 9 (Wireframes): <a href="directoryWireframes/gridLarge.html">Directory Wireframes</a></li>
                 <li>Lesson 9 (Part 2): <a href="chamber/directory.html">Chamber Directory Page</a></li>
                 <li>Lesson 10 (Part 1): <a href="weatherAPI/weatherAPI.html">Weather API Practice</a></li>
+                <li>Lesson 10 (Part 2): <a href="chamber/index.html">Chamber Weather API</a></li>
                 <li>Lesson 11: <a href="">Title</a></li>
             </ul>
         </div>
