Resized phone viewing size.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,6 @@
             <source media="(max-width:1600px)" srcset="images/saguaroLogoLarge.webp">
             <img src="images/saguaroChamberLogoWebp.webp" alt="Saguaro Chamber's Logo">
         </picture>
-        
         <h1 class="saguaroTitle">Saguaro Chamber</h1>
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
@@ -72,7 +71,7 @@
                 <source media="(max-width:500px)" srcset="images/wdd230Small.jpg">
                 <source media="(max-width:700px)" srcset="images/wdd230Medium.jpg">
                 <source media="(max-width:1600px)" srcset="images/wdd230Large.jpg">
-                <img src="images/wdd230Org.jpg" alt="Hero image">
+                <img src="images/wdd230Org.jpg" alt="Hero image" class="heroImg">
             </picture>
             <p class="actionJoin">Join the Chamber</p>
         </div>
