--- a/chamber/contactThankYou.html
+++ b/chamber/contactThankYou.html
@@ -32,9 +32,9 @@
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li class="active"><a href="directory.html">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li> 
-                <li><a href="contactForm.html">Contact</a></li>    
+                <li class="active"><a href="contactForm.html">Contact</a></li>    
             </ul>
         </nav>
         <div class="fullDate"></div>
@@ -60,12 +60,17 @@
         </a>
     </header>
 
-    <main class="directoryMain"> 
-        <div class="btnDiv">
-            <button class="gridBtn">Grid</button>
-            <button class="listBtn">List</button>
-        </div>
-        <div class="grid"></div>
+    <main class="contactMain">
+        <h1>Contact Us</h1>
+        <h2>Saguaro Chamber of Commerce</h2>
+        <p>Address</p>
+        <p>13220 Cactus Rd, Phenoix, AZ, 85003</p>
+        <p>Email</p>
+        <p>saguaro@gmail.com</p>
+        <p>Phone Number</p>
+        <p>(480) 867-5309</p>
+
+        <h1 class="thank you">Thank you for reaching out!<br>We will get back to you soon!</h1>
     </main>
 </body>
 
@@ -85,6 +90,5 @@
 </footer>
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
-<script src="scripts/businessJSON.js"></script>
-<script src="scripts/directoryButtons.js"></script>
+<script src="scripts/windchill.js"></script>
 </html>
