--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -31,7 +31,7 @@
             <li class="active"><a href="discover.html">Discover</a></li>
             <li><a href="directory.html">Directory</a></li>
             <li><a href="join.html">Join</a></li> 
-            <li><a href="#">Contact</a></li>    
+            <li><a href="contactForm.html">Contact</a></li>    
         </ul>
     </nav>
     <div class="fullDate"></div>
@@ -126,5 +126,4 @@
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
 <script src="scripts/websiteVisits.js"></script>
-
 </html>
