--- a/chamber/thankYou.html
+++ b/chamber/thankYou.html
@@ -34,7 +34,7 @@
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="#">Directory</a></li>
                 <li class="active"><a href="join.html">Join</a></li> 
-                <li><a href="#">Contact</a></li>    
+                <li><a href="contactForm.html">Contact</a></li>    
             </ul>
         </nav>
         <div class="fullDate"></div>
